lhb - 포트폴리오 추가 [구현 완] 정지/탈퇴 회원 인터셉트 [구현 완]